# refed

./: CMakeLists.txt  LICENSE  readme.md
.github/workflows/: main.yml  on-push-pr-tests.workflow.yml  on-push-tests.yml  release.workflow.yml
cmake/: refed-config.cmake.in
examples/cmake-dep-with-fetchcontent/: CMakeLists.txt  main.cpp
include/refed/: defer.hpp
tests/unit/: CMakeLists.txt  defer-basic.unittest.cpp  defer.unittest.cpp  readme.md
